DailyHomework/.metadata/.plugins/org.eclipse.cdt.ui/CurrencyConverter.build.log
20:41:07 **** Incremental Build of configuration Debug for project CurrencyConverter ****
make all 
Building file: ../source.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"source.d" -MT"source.d" -o "source.o" "../source.cpp"
../source.cpp:10:1: warning: identifier ‘constexpr’ is a keyword in C++11 [-Wc++0x-compat]
 constexpr float yenRate = 1.0;
 ^
../source.cpp:10:1: error: ‘constexpr’ does not name a type
../source.cpp:10:1: note: C++11 ‘constexpr’ only available with -std=c++11 or -std=gnu++11
../source.cpp:11:1: error: ‘constexpr’ does not name a type
 constexpr float euroRate = 1.0;
 ^
../source.cpp:11:1: note: C++11 ‘constexpr’ only available with -std=c++11 or -std=gnu++11
../source.cpp:12:1: error: ‘constexpr’ does not name a type
 constexpr float poundRate = 1.0;
 ^
../source.cpp:12:1: note: C++11 ‘constexpr’ only available with -std=c++11 or -std=gnu++11
../source.cpp: In function ‘int main()’:
../source.cpp:30:26: error: ‘euroRate’ was not declared in this scope
    currency = currency * euroRate;
                          ^
../source.cpp:33:26: error: ‘yenRate’ was not declared in this scope
    currency = currency * yenRate;
                          ^
../source.cpp:36:26: error: ‘poundRate’ was not declared in this scope
    currency = currency * poundRate;
                          ^
make: *** [source.o] Error 1

20:41:07 Build Finished (took 164ms)

